# chroma-binvox

./: .gitignore  CMakeLists.txt  ReadMe.md  binvox.cc
cc/: CMakeLists.txt
cc/geom/: MeshFile.h
cc/math/: common.h
cc/voxel/: Templates.h  Voxels.h
